# pyquadwild

./: .gitmodules  BINDINGS.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  deploy-site.yml  test.yml
docs/: generate_demo.py  template.html
patches/: fix_submodule_cmake.py
simple/pyquadwild/: index.html
src/: _pyquadwild.cpp  pipeline.cpp  pipeline.h
src/pyquadwild/: __init__.py  quadwild.py
tests/: conftest.py  test_quadwild.py
tests/assets/: cube.stl  icosphere.stl
