[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "Andrea Pozzetti"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy"
]
description = "Python bindings for QuadWild BiMDF quad-dominant remeshing"
name = "pyquadwild"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
test = [
  "pytest",
  "trimesh"
]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/pyquadwild"
"Bug Reports" = "https://github.com/PozzettiAndrea/pyquadwild/issues"
"Source Code" = "https://github.com/PozzettiAndrea/pyquadwild"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*musllinux* *i686*"
test-command = "python -c \"import pyquadwild; print(pyquadwild.quadwild_remesh); print('OK')\""
test-requires = "numpy"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y libgomp || apt-get install -y libgomp1 || true"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "11.0"}
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.scikit-build]
wheel.py-api = "cp312"
cmake.build-type = "Release"
